Fri Nov 27 19:19:44 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/net/http.rb (connect): detect closed connection and reconnect
	  If the server closes a keep-alive http connection, the client socket
	  reaches EOF. To avoid an EOFError, detect the closed connection and
	  reconnect.
	  Added test to ensure HTTP#post succeeds even if the
	  keep-alive-connection has been closed by the server.
	  by Kristian Hanekamp <kris.hanekamp@gmail.com>
	  https://github.com/ruby/ruby/pull/1089 fix GH-1089

Thu Nov 26 21:36:40 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_peephole_optimize): enable tail call
	  optimization for specialized indexers.

	* compile.c (iseq_compile_each): blockiseq should be NULL, but not
	  Qnil.

Thu Nov 26 17:22:53 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* regcomp.c, regenc.c, regexec.c, regint.h, enc/unicode.c:
	  Merge Onigmo 58fa099ed1a34367de67fb3d06dd48d076839692
	  + https://github.com/k-takata/Onigmo/pull/52

Thu Nov 26 09:50:02 2015  yui-knk  <spiketeika@gmail.com>

	* test/coverage/test_coverage.rb: Added test-case for Coverage.restart.
	  [Misc #11732][ruby-dev:49379]

Thu Nov 26 09:46:36 2015  yui-knk  <spiketeika@gmail.com>

	* test/coverage/test_coverage.rb: Added test-case for Coverage.peek_result
	  without Coverage.start. [Misc #11726][ruby-core:71622]

Thu Nov 26 07:22:55 2015  Eric Wong  <e@80x24.org>

	* test/openssl/test_ssl.rb (test_copy_stream): new test

Wed Nov 25 21:23:39 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (copy_stream_body): try to_io conversion before read,
	  readpartial, and write methods.  [ruby-dev:49008] [Bug #11199]

Wed Nov 25 10:55:21 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* io.c (argf_getpartial): should not resize str if the second
	  argument is not given.
	  [ruby-core:71668] [Bug #11738]

Tue Nov 24 23:56:25 2015  Naohisa Goto  <ngotogenome@gmail.com>

	* configure.in: On Solaris, it is safe to define _LARGEFILE_SOURCE