@@ -1,3 +1,8 @@
+Sat Nov 28 19:33:55 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* parse.y (parser_here_document): store dispatched result of
+	  on_tstring_content at the last fragment of a here document.
+
 Fri Nov 27 19:19:44 2015  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* lib/net/http.rb (connect): detect closed connection and reconnect
